# ZKCollab

./: .gitignore  Cargo.toml  FAQ.md  Plan.md  README.md  deployment_info.json  generate_witness.py  onnx_inspect.py  package-lock.json  package.json  proofs_training  run_pipeline.sh  run_with_nvm.sh  sample_model.py  setup_wsl.sh  step_witness_v1.json  step_witness_v2.json
artifacts/contracts/TrainingRegistry.sol/: TrainingRegistry.dbg.json  TrainingRegistry.json
cache/: solidity-files-cache.json
contracts/: TrainingRegistry.sol
docs/: Architecture.md  Arjun_architecture.md  Arjun_plan.md  DEMO_CHEATSHEET.md  FAQ.md  PROVER_VERIFIER.md  Plan.md  Progress.md  Security.md  file_structure.md
scripts/: demo_run.sh  deploy.js  inject_root.py  prover.sh  verifier.sh
src/: basic_block.rs  lib.rs  poseidon_field.cpp  training.rs  training_compile.rs  training_constraints.rs
src/basic_block/: add.rs  copy_constraint.rs  training.rs
src/training/: compile.rs  constraints.rs  data_binding.rs  mod.rs  proof.rs  witness.rs
src/util/: serialization.rs  verifier.rs
test_artifacts/: deployment_info.json  witness_augmented.json
tests/: data_binding_integration.rs
verify_artifacts/: flat_data.json  merkle_root.txt  proof_hex.txt  prover_report.txt  verification_confirmation.json  verification_report.txt
verify_artifacts_strict/: deployment_info.json  proof_hex.txt  prover_report.txt  verification_confirmation.json  verification_report.txt  witness_tampered_root.json
