[package]
name = "zk_torch"
version = "0.1.0"
edition = "2021"
hex = "0.4"

[profile.dev]
opt-level = 3

[dependencies]
ark-std = { version = "0.4", features = ["parallel"] }
ark-ff = { version = "0.4", features = ["parallel"] }
ark-ec = { version = "0.4" }
ark-poly = { version = "0.4", features = ["parallel"] }
ark-bn254 = { version = "0.4" }
ark-serialize = { version = "0.4", features = ["derive"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
once_cell = "1.15"
log = "0.4"
env_logger = "0.10"
plonky2 = { version = "0.2.2", features = ["timing"] }
rand = "0.8"
rayon = "1"
ndarray = { version = "0.16", features = ["serde", "rayon"] }
tract-onnx = "0.21"
sha3 = "0.10"
bincode = "1.3"
itertools = "0.13"

[features]
debug = []
gpu = []
